# veridoc

./: .gitignore  .tool-versions  README.md  Taskfile.yml  VeriDoc AI Project Initiation Document.docx  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  vitest.config.ts
.github/workflows/: ci.yml
.planning/: HANDOFF.json  INGEST-CONFLICTS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/intel/: SYNTHESIS.md  constraints.md  context.md  decisions.md  requirements.md
.planning/intel/classifications/: veridoc-pid-3aa4c1f7.json
.planning/phases/01-platform-skeleton-audit-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-06-PLAN.md  01-06-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VALIDATION.md
.planning/phases/02-fhir-r4-model-emr-ingestion/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-06-PLAN.md  02-06-SUMMARY.md  02-07-PLAN.md  02-07-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-HUMAN-UAT.md  02-PATTERNS.md  02-RESEARCH.md  02-REVIEW-FIX.md  02-REVIEW.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-medidata-rave-mock-integration/: 03-01-PLAN.md  03-02-PLAN.md  03-03-PLAN.md  03-04-PLAN.md  03-05-PLAN.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md  03-VALIDATION.md
apps/web/: index.html  package.json
apps/web/src/: App.test.tsx  App.tsx  test-setup.ts
deploy/helm/veridoc/: Chart.yaml  values-region-eu.yaml  values.yaml
deploy/helm/veridoc/templates/: _helpers.tpl  ingestion-service.yaml  keycloak.yaml  minio.yaml  mongodb.yaml  postgres.yaml  redis.yaml  reference-service.yaml  secrets.yaml
deploy/keycloak/: test-users.json  veridoc-realm.json
deploy/terraform/: README.md  main.tf  variables.tf
docs/prd/: veridoc-pid.md
docs/validation/: KEY-HIERARCHY.md  PACKAGE-LEGITIMACY.md  RBAC-MATRIX.md  SECRETS-CONTRACT.md  THREAT-MODEL.md  VALIDATION-PLAN.md
libs/veridoc-audit/: README.md  pyproject.toml
libs/veridoc-audit/migrations/: 0001_audit_log.py  __init__.py
libs/veridoc-audit/src/veridoc_audit/: __init__.py  _payload.py  chain.py  jcs.py  models.py  sdk.py
libs/veridoc-audit/tests/: conftest.py  test_chain.py  test_jcs_golden.py  test_same_txn.py  test_smoke.py  test_tamper_detection.py
libs/veridoc-auth/: README.md  pyproject.toml
libs/veridoc-auth/src/veridoc_auth/: __init__.py  allowlist.py  errors.py  jwks.py  middleware.py  rbac.py
libs/veridoc-auth/tests/: test_jwt_verify.py  test_rbac.py  test_realm_config.py
libs/veridoc-crypto/: README.md  pyproject.toml
libs/veridoc-crypto/src/veridoc_crypto/: __init__.py  envelope.py  keys.py  kms.py
libs/veridoc-crypto/tests/: test_crypto_shred.py  test_field_encryption.py
libs/veridoc-fhir/: README.md  pyproject.toml
libs/veridoc-fhir/src/veridoc_fhir/: __init__.py  extensions.py  models.py  provenance.py  repository.py
libs/veridoc-fhir/tests/: conftest.py  test_models.py  test_provenance.py  test_regression_save_provenance.py  test_repository.py
libs/veridoc-fhir/tests/fixtures/fhir/: Corie618_Sofia418_Beahan375_ba419d35-0dfe-8af7-347c-eebf02485a56.json  Ezekiel373_Walter473_4f083ce3-f12b-bb4b-7353-e17f0cd55b0a.json  Shalanda398_Terry864_46ee9d82-b52c-856d-069b-5064ff052225.json  Wilfredo622_Fritsch593_aee7bbe1-0c45-c028-1e62-1f4cdb30c273.json  adverse_event.json
libs/veridoc-ingestion/: README.md  pyproject.toml
libs/veridoc-ingestion/src/veridoc_ingestion/: __init__.py  adapter.py  blob_store.py  extraction.py  ocr_engine.py  registry.py  worker.py
libs/veridoc-ingestion/src/veridoc_ingestion/adapters/: __init__.py  hl7v2.py  native_fhir.py  ocr.py  pdf_excel.py  proprietary.py
libs/veridoc-ingestion/src/veridoc_ingestion/mapping/: __init__.py  hl7v2_fhir.py
libs/veridoc-ingestion/tests/: conftest.py  test_adapters.py  test_blob_store.py  test_ocr_engine.py  test_registry.py  test_regression_legibility_flags.py  test_regression_pseudonym_namespace.py  test_regression_worker_ingest.py
libs/veridoc-ingestion/tests/fixtures/hl7/: adt_a01.hl7  oru_r01.hl7
libs/veridoc-pseudonym/: README.md  pyproject.toml
libs/veridoc-pseudonym/src/veridoc_pseudonym/: __init__.py  pseudonym.py
libs/veridoc-pseudonym/tests/: test_pseudonym_deterministic.py
libs/veridoc-tenancy/: README.md  pyproject.toml
libs/veridoc-tenancy/src/veridoc_tenancy/: __init__.py  context.py  middleware.py
libs/veridoc-tenancy/tests/: test_tenancy_failclosed.py
scripts/: gen_synthea_fixtures.sh
services/ingestion-service/: Dockerfile  pyproject.toml
services/ingestion-service/src/ingestion_service/: config.py  db.py  main.py  worker_main.py
services/ingestion-service/src/ingestion_service/api/: auth_audit.py  ingest.py
services/ingestion-service/tests/: conftest.py  test_ingest_api.py  test_worker_integration.py
services/reference-service/: Dockerfile  README.md  pyproject.toml
services/reference-service/migrations/: 0001_subject.py
services/reference-service/src/reference_service/: __init__.py  config.py  db.py  main.py  migrate.py  models.py
services/reference-service/src/reference_service/api/: __init__.py  auth_audit.py  subjects.py
services/reference-service/tests/: conftest.py  test_erasure_audit_immutability.py  test_field_encryption.py  test_login_audit.py  test_rbac.py  test_subject.py
