[project]
name = "veridoc"
version = "0.0.0"
description = "VeriDoc AI — monorepo workspace root (uv). AI-powered SDV platform for clinical trials."
readme = "README.md"
requires-python = ">=3.12"
# The root is a non-package workspace coordinator; member packages live under libs/* and services/*.
dependencies = []

[tool.uv]
package = false

# uv workspace root (D-08): per-language, lightweight monorepo tooling — NOT Nx/Turborepo.
# Every shared platform lib (D-07) and the reference service resolve as workspace members.
[tool.uv.workspace]
members = ["libs/*", "services/*"]

# Source the five shared libs from within the workspace so the reference service depends on
# the local source rather than a published distribution.
[tool.uv.sources]
veridoc-audit = { workspace = true }
veridoc-crypto = { workspace = true }
veridoc-pseudonym = { workspace = true }
veridoc-auth = { workspace = true }
veridoc-tenancy = { workspace = true }

# Dev dependency group (D-08): pytest (Wave 0 test harness) + ruff (lint/format).
# Only packages marked APPROVED in docs/validation/PACKAGE-LEGITIMACY.md.
[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    # Ephemeral Postgres for veridoc-audit integration tests (plan 01-02). APPROVED.
    # conftest prefers VERIDOC_TEST_DATABASE_URL (a real local Postgres) and only
    # falls back to testcontainers when Docker is available.
    "testcontainers>=4.0",
    # FastAPI/Starlette TestClient transport for the reference-service integration tests
    # (plan 01-05). APPROVED — Encode, FastAPI's official test dependency.
    "httpx>=0.27",
]

# Wave 0 pytest config (Task 3 extends addopts/testpaths; declared here so the root owns config).
[tool.pytest.ini_options]
testpaths = ["libs", "services"]
addopts = "-x -q"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "node_modules", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# FastAPI's dependency-injection idiom is `param: T = Depends(...)` in defaults — B008
# (function call in argument default) is the framework's canonical pattern, not a bug.
"services/reference-service/src/reference_service/api/*.py" = ["B008"]
"services/reference-service/src/reference_service/main.py" = ["B008"]
