[project]
name = "veridoc-audit"
version = "0.0.0"
description = "VeriDoc shared audit SDK: RFC 8785 JCS canonicalization + per-record SHA-256 hash chain + same-transaction writer (D-04/D-05/D-06)."
readme = "README.md"
requires-python = ">=3.12"
# Real dependencies (rfc8785, sqlalchemy) are added in plan 01-02 when the SDK is implemented.
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/veridoc_audit"]
