[project]
name = "veridoc-audit"
version = "0.0.0"
description = "VeriDoc shared audit SDK: RFC 8785 JCS canonicalization + per-record SHA-256 hash chain + same-transaction writer (D-04/D-05/D-06)."
readme = "README.md"
requires-python = ">=3.12"
# Runtime deps (plan 01-02). All APPROVED in docs/validation/PACKAGE-LEGITIMACY.md.
#   rfc8785      — RFC 8785 JCS canonicalizer (authentic, Trail of Bits) — feeds the audit hash.
#   sqlalchemy   — 2.x typed Core/ORM; same-transaction writer joins the caller's Session.
#   psycopg      — v3 Postgres driver (binary) for SQLAlchemy.
#   alembic      — append-only audit_log migration (0001) incl. immutability trigger.
#   pydantic     — v2 AuditEvent model carrying the D-06 fields.
dependencies = [
    "rfc8785>=0.1.4",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/veridoc_audit"]
