[project]
name = "veridoc-auth"
version = "0.0.0"
description = "VeriDoc OIDC JWT verification + 8-role RBAC + IP-allowlist middleware against Keycloak JWKS (D-01/D-02)."
readme = "README.md"
requires-python = ">=3.12"
# Real dependencies (pyjwt, jwcrypto, OIDC glue) added in plan 01-04.
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/veridoc_auth"]
