[project]
name = "veridoc-auth"
version = "0.0.0"
description = "VeriDoc OIDC JWT verification + 8-role RBAC + IP-allowlist middleware against Keycloak JWKS (D-01/D-02)."
readme = "README.md"
requires-python = ">=3.12"
# Plan 01-04: Keycloak JWTs verified directly (no OIDC-glue package adopted; see
# docs/validation/PACKAGE-LEGITIMACY.md plan 01-04 resolution note). All APPROVED.
#   pyjwt[crypto] — JWT decode + RS256 signature verification (pulls cryptography)
#   jwcrypto      — JWK/JWKS parsing (Keycloak JWKS -> per-kid public keys)
# `cryptography` (PyCA) is the authentic, required transitive dep for RS256.
dependencies = [
    "pyjwt[crypto]>=2.8",
    "jwcrypto>=1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/veridoc_auth"]
