[project]
name = "veridoc-pseudonym"
version = "0.0.0"
description = "VeriDoc deterministic per-patient pseudonym tokens + crypto-shredding erasure (D-12)."
readme = "README.md"
requires-python = ">=3.12"
# Shares the per-patient key hierarchy with veridoc-crypto; wired in plan 01-03.
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/veridoc_pseudonym"]
