[project]
name = "ingestion-service"
version = "0.0.0"
description = "VeriDoc ingestion service: authenticated async FHIR/EMR ingest endpoint (D-04). POST /ingest/{site_id} → RQ worker → FHIR R4B persisted to MongoDB (D-06)."
readme = "README.md"
requires-python = ">=3.12"
# All packages APPROVED in docs/validation/PACKAGE-LEGITIMACY.md § Phase 02.
dependencies = [
    "veridoc-audit",
    "veridoc-crypto",
    "veridoc-pseudonym",
    "veridoc-auth",
    "veridoc-tenancy",
    "veridoc-fhir",
    "veridoc-ingestion",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "rq>=2.9.1",
    "redis>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingestion_service"]
