[project]
name = "reference-service"
version = "0.0.0"
description = "VeriDoc walking-skeleton FastAPI reference service: HTTP -> Keycloak authn/authz -> tenancy -> envelope-encrypted PII + deterministic pseudonym -> same-transaction hash-chained audit -> Postgres (D-07)."
readme = "README.md"
requires-python = ">=3.12"
# Depends on all five shared platform libs (resolved as workspace members).
# FastAPI/uvicorn/sqlalchemy/etc. are added in plan 01-05 when the service is implemented.
dependencies = [
    "veridoc-audit",
    "veridoc-crypto",
    "veridoc-pseudonym",
    "veridoc-auth",
    "veridoc-tenancy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reference_service"]
